* Have shader render using only user-passed uv coords for normal

--- a/quintessence/Tileo/MeshWithNormals.q.yml
+++ b/quintessence/Tileo/MeshWithNormals.q.yml
@@ -155,7 +155,7 @@ functions:
 
       float u1, v1, u2, v2 = 0;
       if (!normal_atlas->get_tile_uv(tile_index_num, &u1, &v1, &u2, &v2)) return false;
-      if (!set_normal_tile_uv(tile_x, tile_y, u1, v1, u2, v2)) return false;
+      if (!set_normal_tile_uv(tile_x, tile_y, u1/320.0, v1/384.0, u2/320.0, v2/384.0)) return false; // <- TODO: fix this scaling
 
       return true;
     
@@ -228,13 +228,13 @@ functions:
         type: float
         default_argument: 0.0f
       - name: v1
-        type: int
+        type: float
         default_argument: 0.0f
       - name: u2
         type: float
         default_argument: 0.0f
       - name: v2
-        type: int
+        type: float
         default_argument: 0.0f
     body: |
       if (tile_x < 0) return false;
@@ -242,7 +242,7 @@ functions:
       if (tile_y < 0) return false;
       if (tile_y >= num_rows) return false;
 
-      int id_start = (tile_x * 6) + tile_y * (num_columns*6);
+      int id_start = (tile_x + tile_y * num_columns) * 6;
 
       if (id_start >= vertexes.size())
       {
