--- a/quintessence/Tileo/Shaders/MeshWithNormals.q.yml
+++ b/quintessence/Tileo/Shaders/MeshWithNormals.q.yml
@@ -45,13 +45,23 @@ functions:
       return;
 
 
+  - name: set_primary_texture
+    parameters:
+      - name: primary_texture_bitmap
+        type: ALLEGRO_BITMAP*
+        default_argument: nullptr
+    body: |
+      Shader::set_sampler("primary_texture", primary_texture_bitmap, 1);
+      return;
+
+
   - name: set_normal_texture
     parameters:
       - name: normal_texture_bitmap
         type: ALLEGRO_BITMAP*
         default_argument: nullptr
     body: |
-      Shader::set_sampler("normal_texture", normal_texture_bitmap, 1);
+      Shader::set_sampler("normal_texture", normal_texture_bitmap, 2);
       return;
 
 
@@ -71,20 +81,20 @@ functions:
         varying vec2 varying_texcoord;
 
         // normals logic:
-        //attribute vec2 normal_texcoord; // analagous to al_texcoord
-        //varying vec2 varying_normal_texcoord; // analagous to varying_texcoord
+        attribute vec2 al_user_attr_0; // this is the normal_u/normal_v
+        varying vec2 varying_normal_texcoord; // analagous to varying_texcoord
 
         void main()
         {
           varying_color = al_color;
           if (al_use_tex_matrix)
           {
-            vec4 uv = al_tex_matrix * vec4(al_texcoord, 0, 1);
-            varying_texcoord = vec2(uv.x, uv.y);
+            //vec4 uv = al_tex_matrix * vec4(al_texcoord, 0, 1);
+            //varying_texcoord = vec2(uv.x, uv.y);
 
             // normals logic:
-            //vec4 normal_uv = al_tex_matrix * vec4(normal_texcoord, 0, 1);
-            //varying_normal_texcoord = vec2(normal_uv.x, normal_uv.y);
+            vec4 normal_uv = al_tex_matrix * vec4(al_user_attr_0, 0, 1);
+            varying_normal_texcoord = vec2(normal_uv.x, normal_uv.y);
           }
           else
           {
@@ -116,6 +126,7 @@ functions:
         uniform vec3 tint;
 
         // normals logic:
+        uniform sampler2D primary_texture; // analagous to al_tex
         uniform sampler2D normal_texture; // analagous to al_tex
         varying vec2 varying_normal_texcoord; // analagous to varying_texcoord
 
@@ -127,8 +138,8 @@ functions:
           vec4 c;
           if (al_use_tex)
             //c = varying_color * texture2D(al_tex, varying_texcoord);
-            c = varying_color * texture2D(normal_texture, varying_texcoord);
-            //c = varying_color * texture2D(normal_texture, varying_normal_texcoord);
+            //c = varying_color * texture2D(primary_texture, varying_texcoord);
+            c = varying_color * texture2D(normal_texture, varying_normal_texcoord);
           else
             c = varying_color;
           if (!al_alpha_test || alpha_test_func(c.a, al_alpha_func, al_alpha_test_val))
