--- a/quintessence/Tileo/TileoTileVertexAllegroVertexDeclaration.q.yml
+++ b/quintessence/Tileo/TileoTileVertexAllegroVertexDeclaration.q.yml
@@ -69,9 +69,9 @@ functions:
       ALLEGRO_VERTEX_ELEMENT elems[] = {
          {ALLEGRO_PRIM_POSITION, ALLEGRO_PRIM_FLOAT_3, offsetof(TILEO_TILE_VERTEX, x)},
          {ALLEGRO_PRIM_TEX_COORD, ALLEGRO_PRIM_FLOAT_2, offsetof(TILEO_TILE_VERTEX, texture_u)},
-         {ALLEGRO_PRIM_USER_ATTR, ALLEGRO_PRIM_FLOAT_2, offsetof(TILEO_TILE_VERTEX, normal_u)},
-         {ALLEGRO_PRIM_USER_ATTR, ALLEGRO_PRIM_FLOAT_2, offsetof(TILEO_TILE_VERTEX, height_u)},
-         {ALLEGRO_PRIM_USER_ATTR, ALLEGRO_PRIM_FLOAT_1, offsetof(TILEO_TILE_VERTEX, height)},
+         {ALLEGRO_PRIM_USER_ATTR+0, ALLEGRO_PRIM_FLOAT_2, offsetof(TILEO_TILE_VERTEX, normal_u)},
+         {ALLEGRO_PRIM_USER_ATTR+1, ALLEGRO_PRIM_FLOAT_2, offsetof(TILEO_TILE_VERTEX, height_u)},
+         {ALLEGRO_PRIM_USER_ATTR+2, ALLEGRO_PRIM_FLOAT_1, offsetof(TILEO_TILE_VERTEX, height)},
          {ALLEGRO_PRIM_COLOR_ATTR, 0, offsetof(TILEO_TILE_VERTEX, color)},
          {0, 0, 0},
       };
