--- a/quintessence/Tileo/Shaders/MeshWithNormals.q.yml
+++ b/quintessence/Tileo/Shaders/MeshWithNormals.q.yml
@@ -132,21 +132,33 @@ functions:
 
         bool alpha_test_func(float x, int op, float compare);
         void alter_by_tint(inout vec4 color);
+        void alter_by_normal_texture_color(inout vec4 color, in vec4 normal_color);
 
         void main()
         {
-          vec4 c;
+          vec4 c, normal_c;
           if (al_use_tex)
+          {
             //c = varying_color * texture2D(al_tex, varying_texcoord); // <-- this is the base texture
             c = varying_color * texture2D(primary_texture, varying_texcoord); // <-- this is the base texture
             //c = varying_color * texture2D(primary_texture, varying_texcoord);
-            //c = varying_color * texture2D(normal_texture, varying_normal_texcoord); // <-- this is the normal texture
+            normal_c = varying_color * texture2D(normal_texture, varying_normal_texcoord); // <-- this is the normal texture
+          }
           else
+          {
             c = varying_color;
+          }
+
           if (!al_alpha_test || alpha_test_func(c.a, al_alpha_func, al_alpha_test_val))
-            gl_FragColor = alter_by_tint(c);
+          {
+            vec4 normal_altered_c = alter_by_normal_texture_color(c, normal_c);
+
+            gl_FragColor = alter_by_tint(normal_altered_c);
+          }
           else
+          {
             discard;
+          }
         }
 
         bool alpha_test_func(float x, int op, float compare)
@@ -169,6 +181,14 @@ functions:
            color.g = (color.g * inverse_tint_intensity + tint.g * tint_intensity) * color.a;
            color.b = (color.b * inverse_tint_intensity + tint.b * tint_intensity) * color.a;
            color.a = color.a;
+        }
+
+        void alter_by_normal_texture_color(inout vec4 color, in vec4 normal_color)
+        {
+           color.r = color.r += normal_color.r; //inverse_tint_intensity + tint.r * tint_intensity) * color.a;
+           color.g = color.g += normal_color.g; //inverse_tint_intensity + tint.g * tint_intensity) * color.a;
+           color.b = color.b += normal_color.b; //inverse_tint_intensity + tint.b * tint_intensity) * color.a;
+           color.a = color.a += normal_color.a;
         }
 
       )DELIM";
