--- a/quintessence/Tileo/MeshWithNormals.q.yml
+++ b/quintessence/Tileo/MeshWithNormals.q.yml
@@ -125,7 +125,7 @@ functions:
 
       tile_ids[tile_x + tile_y * num_columns] = tile_index_num;
 
-      int atlas_bitmap_width = 320;
+      int atlas_bitmap_width = 320; // <- TODO: fix this scaling
       int atlas_bitmap_height = 384;
 
       float u1, v1, u2, v2 = 0;
@@ -134,7 +134,7 @@ functions:
       v1 /= atlas_bitmap_height;
       u2 /= atlas_bitmap_width;
       v2 /= atlas_bitmap_height;
-      if (!set_tile_uv(tile_x, tile_y, u1, v1, u2, v2)) return false; // <- TODO: fix this scaling
+      if (!set_tile_uv(tile_x, tile_y, u1, v1, u2, v2)) return false;
 
       return true;
     
@@ -160,7 +160,7 @@ functions:
 
       normal_tile_ids[tile_x + tile_y * num_columns] = tile_index_num;
 
-      int normal_atlas_bitmap_width = 48;
+      int normal_atlas_bitmap_width = 48; // <-- TODO: fix this scaling
       int normal_atlas_bitmap_height = 48;
 
       float u1, v1, u2, v2 = 0;
@@ -169,7 +169,7 @@ functions:
       v1 /= normal_atlas_bitmap_height;
       u2 /= normal_atlas_bitmap_width;
       v2 /= normal_atlas_bitmap_height;
-      if (!set_normal_tile_uv(tile_x, tile_y, u1, v1, u2, v2)) return false; // <- TODO: fix this scaling
+      if (!set_normal_tile_uv(tile_x, tile_y, u1, v1, u2, v2)) return false;
 
       return true;
     
