--- a/quintessence/Tileo/Shaders/MeshWithNormals.q.yml
+++ b/quintessence/Tileo/Shaders/MeshWithNormals.q.yml
@@ -45,6 +45,16 @@ functions:
       return;
 
 
+  - name: set_light_angle_of_incidence
+    parameters:
+      - name: light_angle_of_incidence
+        type: float
+        default_argument: 0.0f
+    body: |
+      Shader::set_float("light_angle_of_incidence", light_angle_of_incidence);
+      return;
+
+
   - name: set_primary_texture
     parameters:
       - name: primary_texture_bitmap
@@ -125,6 +135,9 @@ functions:
         uniform float tint_intensity;
         uniform vec3 tint;
 
+        // lights logic:
+        uniform float light_angle_of_incidence;
+
         // normals logic:
         uniform sampler2D primary_texture; // analagous to al_tex
         uniform sampler2D normal_texture; // analagous to al_tex
@@ -174,6 +187,8 @@ functions:
 
         void alter_by_tint(inout vec4 color)
         {
+           return;
+
            float inverse_tint_intensity = 1.0 - tint_intensity;
            color.r = (color.r * inverse_tint_intensity + tint.r * tint_intensity) * color.a;
            color.g = (color.g * inverse_tint_intensity + tint.g * tint_intensity) * color.a;
@@ -183,10 +198,28 @@ functions:
 
         void alter_by_normal_texture_color(inout vec4 color, in vec4 normal_color)
         {
-           color.r = color.r += normal_color.r; //inverse_tint_intensity + tint.r * tint_intensity) * color.a;
-           color.g = color.g += normal_color.g; //inverse_tint_intensity + tint.g * tint_intensity) * color.a;
-           color.b = color.b += normal_color.b; //inverse_tint_intensity + tint.b * tint_intensity) * color.a;
-           color.a = color.a += normal_color.a;
+           int light_direction_y = int(floor(light_angle_of_incidence * 8.0 + 0.5));
+           int angle_to_light_y = int(floor(normal_color.g * 8.0 + 0.5));
+           bool light_modified = (light_direction_y == angle_to_light_y);
+
+           if (!light_modified)
+           {
+              // darken
+              color.r = color.r *= 0.8; //normal_color.r; //inverse_tint_intensity + tint.r * tint_intensity) * color.a;
+              color.g = color.g *= 0.8; //normal_color.g; //inverse_tint_intensity + tint.g * tint_intensity) * color.a;
+              color.b = color.b *= 0.8; //normal_color.b; //inverse_tint_intensity + tint.b * tint_intensity) * color.a;
+              color.a = color.a *= 0.8;
+           }
+           else
+           {
+              return;
+
+              // brighten
+              color.r = color.r += 0.5; //normal_color.r; //inverse_tint_intensity + tint.r * tint_intensity) * color.a;
+              color.g = color.g += 0.5; //normal_color.g; //inverse_tint_intensity + tint.g * tint_intensity) * color.a;
+              color.b = color.b += 0.5; //normal_color.b; //inverse_tint_intensity + tint.b * tint_intensity) * color.a;
+              color.a = color.a += 0.5;
+           }
         }
 
       )DELIM";
