--- a/quintessence/Tileo/Shaders/MeshWithNormals.q.yml
+++ b/quintessence/Tileo/Shaders/MeshWithNormals.q.yml
@@ -55,6 +55,16 @@ functions:
       return;
 
 
+  - name: set_light_spread
+    parameters:
+      - name: light_spread
+        type: int
+        default_argument: 0
+    body: |
+      Shader::set_int("light_spread", light_spread);
+      return;
+
+
   - name: set_primary_texture
     parameters:
       - name: primary_texture_bitmap
@@ -137,6 +147,7 @@ functions:
 
         // lights logic:
         uniform float light_angle_of_incidence;
+        uniform int light_spread;
 
         // normals logic:
         uniform sampler2D primary_texture; // analagous to al_tex
@@ -198,11 +209,15 @@ functions:
 
         void alter_by_normal_texture_color(inout vec4 color, in vec4 normal_color)
         {
+           //int spread = 1;
            int light_direction_y = int(floor(light_angle_of_incidence * 8.0 + 0.5));
            int angle_to_light_y = int(floor(normal_color.g * 8.0 + 0.5));
-           bool light_modified = (light_direction_y == angle_to_light_y);
+           bool in_shadow =
+             (abs(float(light_direction_y) - float(angle_to_light_y)) > float(4));
+           bool in_light =
+             (abs(float(light_direction_y) - float(angle_to_light_y)) < max(1.0, float(light_spread * 2)));
 
-           if (!light_modified)
+           if (in_shadow)
            {
               // darken
               color.r = color.r *= 0.8; //normal_color.r; //inverse_tint_intensity + tint.r * tint_intensity) * color.a;
@@ -210,15 +225,16 @@ functions:
               color.b = color.b *= 0.8; //normal_color.b; //inverse_tint_intensity + tint.b * tint_intensity) * color.a;
               color.a = color.a *= 0.8;
            }
-           else
+
+           if (in_light)
            {
-              return;
+              //return;
 
               // brighten
-              color.r = color.r += 0.5; //normal_color.r; //inverse_tint_intensity + tint.r * tint_intensity) * color.a;
-              color.g = color.g += 0.5; //normal_color.g; //inverse_tint_intensity + tint.g * tint_intensity) * color.a;
-              color.b = color.b += 0.5; //normal_color.b; //inverse_tint_intensity + tint.b * tint_intensity) * color.a;
-              color.a = color.a += 0.5;
+              color.r = color.r += 0.2; //normal_color.r; //inverse_tint_intensity + tint.r * tint_intensity) * color.a;
+              color.g = color.g += 0.2; //normal_color.g; //inverse_tint_intensity + tint.g * tint_intensity) * color.a;
+              color.b = color.b += 0.2; //normal_color.b; //inverse_tint_intensity + tint.b * tint_intensity) * color.a;
+              color.a = color.a += 0.2;
            }
         }
 
