* Change light position to vec2

--- a/quintessence/Tileo/Shaders/MeshWithNormals.q.yml
+++ b/quintessence/Tileo/Shaders/MeshWithNormals.q.yml
@@ -45,13 +45,13 @@ functions:
       return;
 
 
-  - name: set_light_angle_of_incidence
+  - name: set_light_position
     parameters:
-      - name: light_angle_of_incidence
-        type: float
+      - name: light_position
+        type: AllegroFlare::vec2d
         default_argument: 0.0f
     body: |
-      Shader::set_float("light_angle_of_incidence", light_angle_of_incidence);
+      Shader::set_vec2("light_position", light_position.x, light_position.y);
       return;
 
 
@@ -146,7 +146,7 @@ functions:
         uniform vec3 tint;
 
         // lights logic:
-        uniform float light_angle_of_incidence;
+        uniform vec2 light_position;
         uniform int light_spread;
 
         // normals logic:
@@ -210,7 +210,7 @@ functions:
         void alter_by_normal_texture_color(inout vec4 color, in vec4 normal_color)
         {
            //int spread = 1;
-           int light_direction_y = int(floor(light_angle_of_incidence * 8.0 + 0.5));
+           int light_direction_y = int(floor(light_position.y * 8.0 + 0.5));
            int angle_to_light_y = int(floor(normal_color.g * 8.0 + 0.5));
            bool in_shadow =
              (abs(float(light_direction_y) - float(angle_to_light_y)) > float(4));
@@ -228,13 +228,19 @@ functions:
 
            if (in_light)
            {
-              //return;
-
+              return;
               // brighten
               color.r = color.r += 0.2; //normal_color.r; //inverse_tint_intensity + tint.r * tint_intensity) * color.a;
               color.g = color.g += 0.2; //normal_color.g; //inverse_tint_intensity + tint.g * tint_intensity) * color.a;
               color.b = color.b += 0.2; //normal_color.b; //inverse_tint_intensity + tint.b * tint_intensity) * color.a;
               color.a = color.a += 0.2;
+           }
+           else
+           {
+              color.r = color.r *= 0.8; //normal_color.r; //inverse_tint_intensity + tint.r * tint_intensity) * color.a;
+              color.g = color.g *= 0.8; //normal_color.g; //inverse_tint_intensity + tint.g * tint_intensity) * color.a;
+              color.b = color.b *= 0.8; //normal_color.b; //inverse_tint_intensity + tint.b * tint_intensity) * color.a;
+              color.a = color.a *= 0.8;
            }
         }
 
@@ -251,5 +257,7 @@ dependencies:
     headers: [ allegro5/allegro.h ]
   - symbol: ALLEGRO_BITMAP*
     headers: [ allegro5/allegro.h ]
+  - symbol: AllegroFlare::vec2d
+    headers: [ AllegroFlare/Vec2D.hpp ]
 
 
