--- a/quintessence/Tileo/Shaders/MeshWithNormals.q.yml
+++ b/quintessence/Tileo/Shaders/MeshWithNormals.q.yml
@@ -157,7 +157,8 @@ functions:
         bool alpha_test_func(float x, int op, float compare);
         void alter_by_tint(inout vec4 color);
         void alter_by_normal_texture_color(inout vec4 color, in vec4 normal_color);
-        void downsample_color(inout vec4 color);
+        void downsample_color_8bit(inout vec4 color);
+        void downsample_color_16bit(inout vec4 color);
 
         void main()
         {
@@ -176,7 +177,7 @@ functions:
           {
             c = alter_by_normal_texture_color(c, normal_c);
             c = alter_by_tint(c);
-            c = downsample_color(c);
+            c = downsample_color_16bit(c);
 
             gl_FragColor = c;
           }
@@ -210,11 +211,18 @@ functions:
            color.a = color.a;
         }
 
-        void downsample_color(inout vec4 color)
+        void downsample_color_8bit(inout vec4 color)
         {
            color.r = floor(color.r * 9. + 0.5) / 9.;
            color.g = floor(color.g * 8. + 0.5) / 8.;
            color.b = floor(color.b * 4. + 0.5) / 4.;
+        }
+
+        void downsample_color_16bit(inout vec4 color)
+        {
+           color.r = floor(color.r * 12. + 0.5) / 12.;
+           color.g = floor(color.g * 16. + 0.5) / 16.;
+           color.b = floor(color.b * 9. + 0.5) / 9.;
         }
 
         void alter_by_normal_texture_color(inout vec4 color, in vec4 normal_color)
